@@ -168,15 +168,15 @@ To make a release (for the MPFR team):
   5) Make sure that any change has been committed (with "svn st").
      Generate the release version with "make dist".
 
-  6) Test the release version on different machines, with and without
-     --enable-assert, with and without GMP's --disable-alloca configure
-     option (or compile GMP with --enable-alloca=debug and MPFR with
-     --with-gmp-build to be able to get the memory leak errors), with
-     and without -DXDEBUG in $CFLAGS, with and without gmp internal
-     files (--enable-gmp-internals), with and without GMP built as a
-     shared library, with objdir equal to and different from srcdir
-     (e.g. ../mpfr-source/configure after making mpfr-source read-only),
-     with and without --enable-logging.
+  6) Test the release version on different machines, with --enable-assert
+     set to yes, no (default), none and full respectively, with and
+     without GMP's --disable-alloca configure option (or compile GMP with
+     --enable-alloca=debug and MPFR with --with-gmp-build to be able to
+     get the memory leak errors), with and without -DXDEBUG in $CFLAGS,
+     with and without gmp internal files (--enable-gmp-internals), with
+     and without GMP built as a shared library, with objdir equal to and
+     different from srcdir (e.g. ../mpfr-source/configure after making
+     mpfr-source read-only), with and without --enable-logging.
 
      Try different gcc versions with different options: with and without
      "-std=c99 -O3 -D_XOPEN_SOURCE=500", with and without "-ansi" (which
@@ -303,7 +303,10 @@ List of the used macros for building MPFR:
 
 + XDEBUG:               Use generic 'double' code instead of IEEE specific one.
                         The IEEE code for double needs GMP internal files.
-+ WANT_ASSERT:          Define if we want to turn on the assertions.
++ WANT_ASSERT:          Define to 1 to turn on the assertions, 2 for complete
+                        assertions (debugging mode), -1 to disable assertions
+                        entirely.
+
 + MPFR_EXP_CHECK:       Define if we want to check the exp field.
 
 + MPFR_PREC_FORMAT:     Define the internal format of prec field
