@@ -19,7 +19,7 @@ echo "Reconfiguring MPFR"
 autoreconf -i || exit 1
 
 echo "Building MPFR"
-./configure --enable-assert --disable-shared --enable-static \
+./configure --enable-assert=none --disable-shared --enable-static \
   CFLAGS="-fprofile-arcs -ftest-coverage -g"  || exit 1
 make clean  || exit 1
 make all -j4 || exit 1
